--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   width: 380px;
   height: 460px;
+  list-style: none;
 }
 .header {
   position: relative;
@@ -49,8 +50,8 @@
   width: 62px;
   height: 62px;
   border-radius: 50%;
-  top: 10px;
-  right: 10px;
+  top: 9.42px;
+  right: 8.52px;
   position: absolute;
 }
 .userInfo {
@@ -67,16 +68,8 @@
 }
 
 .btn {
-  padding: 14px 28px;
-  border-radius: 10.31px;
-  box-shadow: 0px 3.44px 3.44px 0px rgba(0, 0, 0, 0.25);
   background: rgb(235, 216, 255);
-  width: 196px;
-  height: 50px;
-  display: block;
-  margin: 0 auto;
-  font-size: 18px;
-  font-weight: 600;
-  color: #373737;
-  border: none;
+}
+.following {
+  background: #5cd3a8;
 }
